# todo-actix

./: .env  Cargo.toml  README.md
migrations/2022-01-20-151136_todo_fixture/: up.sql
src/: db.rs  errors.rs  handlers.rs  lib.rs  models.rs  schema.rs
