[package]
name = "todo-actix"
version = "0.1.0"
edition = "2018"

[features]
default = []

# Integration tests
integration = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2"
actix-http = "2"
actix-service = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
dotenv = "0"
config = "0"
diesel = { version = "1.4", default-features = false, features = ["postgres"] }
slog = "2.5.2"
slog-term = "2.5"
slog-async = "2.4"
slog-envlogger = "2.2"
tokio-postgres = "0.7"
deadpool-postgres = { version = "0.10", features = ["serde"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.48"